/badges/user/{userId} endpoint added
