# badges-impl/src/main/resources/api-spec.yaml
@@ -52,6 +52,25 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/Badge'
+  /badges/user/{userId}:
+    get:
+      description: get badges for one user
+      operationId: getUserBadges
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Badge'
   /applications:
     post:
       description: register your app to the gamification server
